[package]
name = "ppm"
version = "0.1.0"
authors = ["Merzoouk OUMEDDAH <merzoukoumeddah@gmail.com>","Aghylas SAI <aghilassai@gmail.com>","Juba Saadi SARNI <juba.sarni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libppm"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"

[dependencies]
